Scalability: basic topology tests
This patch introduces basic tools to perform
scalability tests related to topology access
using the existing DataClient interface, as well
as a ZOOM based interface.

Ref: MN-2765

Change-Id: I8fea67bf107ab352c9e3be4aafad59d99f6def9f
Signed-off-by: Ernest Artiaga <ernest@midokura.com>